// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Path should render correctly 1`] = `
<svg
  className="grid"
  height={480}
  version="1.1"
  viewBox="-50 -50 100 100"
  width={640}
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    className="test1"
  >
    <path
      d="M 17.147302994931888,9.9 L 0,0 "
    />
  </g>
</svg>
`;

exports[`Path should render correctly without an end hex 1`] = `
<svg
  className="grid"
  height={480}
  version="1.1"
  viewBox="-50 -50 100 100"
  width={640}
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    className="test2"
  >
    <path
      d=""
    />
  </g>
</svg>
`;
